--- a/slides/main.tex
+++ b/slides/main.tex
@@ -211,27 +211,27 @@
 
 
 
+
 \begin{table}[h]
-  \begin{center}
-  \resizebox{9cm}{!}{
+  \begin{center}\resizebox{7cm}{!}{
     \begin{tabular}{| l || l | l | l | l |}
       \hline
-      algorithm          & covered & minDist   & minDistAvg & maxDistAvg \\
+      algorithm          & covered & minDist (rel)   & minDistAvg (rel) & minDistAvg (abs) \\
       \hline
-      Painter+random     & \red {60}     & 0.002 (0) & 1.211       & 4.035      \\
+      Painter+random     & \red{80}    & 0.0 (0) & 1.01     & 24.266    \\
 
-      random+heuristic   & 26      & 0.0 (0)   & 1.595      & 2.592      \\
+      random+heuristic   & 29      & 0.0 (0)   & 1.587     & 42.946     \\
 
-      RightToLeft        & 18      & 0.017 (0) & 1.621      & 2.685      \\
-\hline
-      Painter+ heuristic & \red 6       & 0.022 (0) & 1.706      & 2.648      \\
+      RightToLeft        & 18      & 0.017 (0) & 1.621      & 43.407     \\
 
-      our Stacking       & \red 0       & 0.271     & 1.765      & 2.838      \\
+      Painter+ heuristic & \red{5 }      & 0.022 (0) & 1.706      & 41.719   \\
+
+      our Stacking       & \red{0}     & 0.271     & 1.765      & 44.452      \\
 
       \hline
     \end{tabular}}
   \end{center}
-  \caption{date: 22.08.2020  , $M=50$, $S=500$ and $\text{MnC}=5000$  }
+  \caption{ date: 22.08.2020, $M=50$, $S=500$ and $\text{MnC}=5000$  }
 \end{table}
 \end{frame}
 
