--- a/main.tex
+++ b/main.tex
@@ -837,7 +837,7 @@ We found in accordance with \cite{tufte} that utility is difficult to impossible
 
 Note that different glyphs have a focus on different aspects of the data. The nested disks allow a comparison between sub-disks of different glyphs, e.g., we can compare the number of deceased citizens of the US to the number of confirmed cases in Germany. On the other hand the comparison of the different features in one glyph is difficult, e.g., comparing the ratio of deceased and recovered for any glyph is difficult. For pie charts the exact opposite is the case, as it is easy to make a ratio comparison for one glyph but it's difficult to compare sub-disks of different glyphs. Assuming linear scaling the square approach should be the best of both worlds, as they depict ratios for a single glyph nicely and the sub-rectangles are easily compared among different glyphs. The downside of the squares are a seemingly chaotic visualisation and a far more difficult optimization problem since a simple greedy approach does not work. Even the difficulty of calculating an optimal stacking with optimal rotations needs further investigation.
 
-Furthermore, the ratio between covered points and overall points/lines in the square/pie approach can be seen as a discrete version of the relative visibility which we used for the nested disks. If we go on step further we could arbitrarily add new important points. If we then take the limit, the value of the ratio should approach the relative visibility, which may allow a better comparison. However, this needs to be explored in further work.
+Furthermore, the ratio between covered points and overall points/lines in the square/pie approach can be seen as a discrete version of the relative visibility which we used for the nested disks. If we go one step further we could arbitrarily add new important points. If we then take the limit, the value of the ratio should approach the relative visibility, which may allow a better comparison. However, this needs to be explored in further work.
 
 % ----------------------
 \begin{thebibliography}{999}
